<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/Button01"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/buttn_background"
            android:text="@string/credit"
            android:textColor="@color/White"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/buttn_background"
            android:text="@string/info_minute"
            android:textColor="@color/White"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/buttn_background"
            android:text="@string/balance"
            android:textColor="@color/White"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/buttn_background"
            android:text="@string/internet"
            android:textColor="@color/White"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/buttn_background"
            android:text="@string/my_number"
            android:textColor="@color/White"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>